--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: grey;
+  background-color: rgb(55, 55, 51);
   font-size: 20px;
 }
 
@@ -13,17 +13,17 @@ head{
 }
 
 article{
-  background-color: darkred;
+  background-color: rgb(171, 37, 19);
   width: 40%;
   margin: 0 auto;
-  padding: 20px;
   color: white;
+  padding: 20px;
 }
 
 h1{
   margin-left: 30%;
   font-size: 50px;
-  font-family: fantasy;
+  font-family: 'Berkshire Swash';
   color: white;
 }
 
@@ -37,9 +37,9 @@ main {
 
 aside {
   float: right;
-  flex-direction: row;
   display: flex;
   flex-direction: column;
+  margin-top: 35px;
 }
 
 p {
@@ -56,4 +56,14 @@ footer{
   width: 40%;
   padding: 5px 20px 5px 20px;
   text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  padding: 20px;
+}
+
+a:hover{
+  background-color: rgb(150, 37, 19);
 }
